# rust-audio-switcher

./: Cargo.toml  LICENSE  README.md
src/: main.rs
