[package]
name = "audio-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_Devices", "Win32_Devices_FunctionDiscovery", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
windows-core = "0.62.2"
